@@ -1195,6 +1195,13 @@ static inline WebDataSource *dataSource(DocumentLoader* loader)
     return result;
 }
 
+- (BOOL)_allowsFollowingLink:(NSURL *)URL
+{
+    if (!_private->coreFrame)
+        return YES;
+    return FrameLoader::canLoad(URL, String(), _private->coreFrame->document());
+}
+
 @end
 
 @implementation WebFrame
