@@ -91,4 +91,6 @@ interface IWebFramePrivate : IUnknown
     HRESULT numberOfActiveAnimations([out, retval] UINT* number);
 
     HRESULT isDisplayingStandaloneImage([out, retval] BOOL* result);
+
+    HRESULT allowsFollowingLink([in] BSTR url, [out, retval] BOOL* result);
 }
